# Threadripper-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
scripts/: special_ping.sh
src/: data_structs.rs  main.rs  messages.rs  multi_handler.rs
src/commands/: help.rs  mod.rs  moderation.rs  ping.rs  prefix.rs  threads.rs
